[package]
name = "xross-alloc"
version = "3.0.1"
edition = "2024"

[dependencies]
rand = "0.10.0"
rlsf = { version = "0.2", optional = true }
spin = "0.10"

# macOS 以外（Linux/Windows）の場合のみ、外部アロケーターをビルド可能にする
[target.'cfg(not(target_os = "macos"))'.dependencies]
mimalloc = { version = "0.1.48", optional = true }
jemallocator = { version = "0.5.4", optional = true }
rpmalloc = { version = "0.2.2", optional = true }
snmalloc-rs = { version = "0.3.8", optional = true }
tcmalloc = { version = "0.3.0", optional = true }

[features]
default = ["multi-thread"]
multi-thread = []
jvmalloc = ["dep:rlsf"]

# jvmalloc 以外のすべてのアロケーターを有効化するフィーチャー
# macOS では依存関係自体が存在しないため、これらは空のフィーチャーとして扱われ、エラーを防ぎます
full = ["mimalloc", "jemalloc", "rpmalloc", "snmalloc", "tcmalloc"]

mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:jemallocator"]
rpmalloc = ["dep:rpmalloc"]
snmalloc = ["dep:snmalloc-rs"]
tcmalloc = ["dep:tcmalloc"]
