[package]
name = "xross-alloc"
version = "3.0.1"
edition = "2024"

[dependencies]
rlsf = "0.2"
spin = "0.10"
libc = "0.2"
rand = { version = "0.10.0", optional = true }
mimalloc = { version = "0.1.48", optional = true }
jemallocator = { version = "0.5.4", optional = true }
rpmalloc = { version = "0.2.2", optional = true }
snmalloc-rs = { version = "0.3.8", optional = true }
tcmalloc = { version = "0.3.0", optional = true }

[features]
jvm = []
benchmark = [
    "dep:rand",
    "dep:mimalloc",
    "dep:jemallocator",
    "dep:rpmalloc",
    "dep:snmalloc-rs",
    "dep:tcmalloc"
]

[[example]]
name = "benchmark"
required-features = ["benchmark"]
