[package]
name = "xross-core"
version = "3.0.0"
edition = "2024"

[dependencies]
xross-macros = { path = "../xross-macros", version = "3.0.0" }
# xross-alloc を追加。デフォルトでは無効化(optional = true)
xross-alloc = { path = "../xross-alloc", version = "3.0.0", optional = true }
tokio = { version = "1.49", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }

[features]
default = []
# xross-alloc フィーチャーを定義
xross-alloc = ["dep:xross-alloc", "xross-alloc/jvmalloc"]
tokio = ["dep:tokio", "dep:futures"]
