[package]
name = "xross-macros"
version = "0.1.0"
edition = "2024"

[lib]
# これにより proc-macro としてコンパイルされます
proc-macro = true

[dependencies]
serde_json.workspace = true
xross-metadata = { path = "../xross-metadata" }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
regex = "1.12.2"
heck = "0.5.0"
