[package]
name = "xross-macros"
version = "1.0.0"
edition = "2024"
build = "build.rs"
[lib]
# これにより proc-macro としてコンパイルされます
proc-macro = true

[dependencies]
serde_json.workspace = true
xross-metadata = { path = "../xross-metadata" }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
heck = "0.5.0"
proc-macro2 = "1.0.106"
