[package]
name = "xross-macros"
version = "3.0.1"
edition = "2024"
build = "build.rs"
[lib]
# これにより proc-macro としてコンパイルされます
proc-macro = true

[dependencies]
serde_json.workspace = true
xross-metadata = { path = "../xross-metadata", version = "3.0.1" }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
heck = "0.5.0"
proc-macro2 = "1.0.106"

[dev-dependencies]
xross-core = { path = "../xross-core", version = "3.0.1" }
